# rag_on_azure_with_ai_search

./: .env.example  .gitignore  README.md  app.py  main.py  openshift.jsonl  pranits_scraper.py  pyproject.toml  scraper.py  vmware.jsonl
crawling/hakrawler/: README.md  hakrawler.go  test.csv
src/: config.py  generation.py  ingestion.py  retrieval.py
