[project]
name = "rag-with-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.2",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.28.0",
    "beautifulsoup4>=4.14.3",
    "goose3>=3.1.21",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langdetect>=1.0.9",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "tldextract>=5.3.1",
]
